--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,12 +1,12 @@
 ---
 # tasks file for ansible-pacemaker
-- include: debian.yml
+- include_tasks: debian.yml
   when: ansible_os_family == "Debian"
 
-- include: config.yml
+- include_tasks: config.yml
   tags:
     - pacemaker_config
 
-- include: cluster.yml
+- include_tasks: cluster.yml
   tags:
     - pacemaker_cluster
